# ZArchive

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json  zarchive.1  zarchive.pc.in
.github/workflows/: build.yml
cmake/: Findzstd.cmake
include/zarchive/: zarchivecommon.h  zarchivereader.h  zarchivewriter.h
src/: main.cpp  sha_256.c  zarchivereader.cpp  zarchivewriter.cpp
